--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fusion 2025</title>
-<link rel="icon" href="./favicon.svg" type="image/x-icon">
-<link rel="stylesheet" href="./components/footer/footer.css">
-<link rel="stylesheet" href="./components/header/menu/menu.css">
-<link rel="stylesheet" href="./components/header/header.css">
+<link rel="icon" href="favicon.svg" type="image/x-icon">
+<link rel="stylesheet" href="components/footer/footer.css">
+<link rel="stylesheet" href="components/header/menu/menu.css">
+<link rel="stylesheet" href="components/header/header.css">
 <link rel="stylesheet" href="index.css">
-<script type="module" src="./js/index.js"></script>
-<script src="./js/scrollToTop.js"></script>
+<script type="module" src="js/index.js"></script>
+<script src="js/scrollToTop.js"></script>
 </head>
 <body>
 
 <div id="header">
-  <video playsinline autoplay muted loop poster id="video-bg"><source src="\assets\video\cristo.mp4" type="video/mp4"></video>
+  <video playsinline autoplay muted loop poster id="video-bg"><source src=".\assets\video\cristo.mp4" type="video/mp4"></video>
   <!-- <svg src="/assets/others/layer_cabecalho.svg" width="100" height="50" viewBox="0 0 100 50"></svg> -->
 </div>
 
@@ -23,8 +23,8 @@
   <h2 id="titulo">Home</h2>
   <div class="content">
     <div class="images">
-      <img src="./assets/others/imagem1Home.png" height="291px" alt="Imagem 1">
-      <img src="./assets/others/imagem2Home.jpg" height="345px" alt="Imagem 2">
+      <img src="assets/others/imagem1Home.png" height="291px" alt="Imagem 1">
+      <img src="assets/others/imagem2Home.jpg" height="345px" alt="Imagem 2">
     </div>
     <div class="text">
       <p>
@@ -41,7 +41,7 @@
        </p>
     </div>
   </div>
-  <button id="btnTopo"><img src="/assets/others/seta.svg"></button>
+  <button id="btnTopo"><img src="assets/others/seta.svg"></button>
 </div>
 
 <footer id="footer">
