--- a/call-for-contributions.html
+++ b/call-for-contributions.html
@@ -4,17 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Call for Contributions - Fusion 2025</title>
-<link rel="icon" href="/favicon.svg" type="image/x-icon">
-<link rel="stylesheet" href="\components\footer\footer.css">
-<link rel="stylesheet" href="\components\header\menu\menu.css">
-<link rel="stylesheet" href="\components\header\header.css">
+<link rel="icon" href="favicon.svg" type="image/x-icon">
+<link rel="stylesheet" href="components\footer\footer.css">
+<link rel="stylesheet" href="components\header\menu\menu.css">
+<link rel="stylesheet" href="components\header\header.css">
 <link rel="stylesheet" href="index.css">
-<script type="module" src="\js\index.js"></script>
+<script type="module" src="js\index.js"></script>
 </head>
 <body>
 
 <div id="header">
-  <video playsinline autoplay muted loop poster id="video-bg"><source src="\assets\video\cristo.mp4" type="video/mp4"></video>
+  <video playsinline autoplay muted loop poster id="video-bg"><source src="assets\video\cristo.mp4" type="video/mp4"></video>
 </div>
 
 <div id="body" class="container">
