--- a/venue-e-travel.html
+++ b/venue-e-travel.html
@@ -1,29 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Venue & Travel - Fusion 2025</title>
-<link rel="icon" href="favicon.svg" type="image/x-icon">
-<link rel="stylesheet" href="components\footer\footer.css">
-<link rel="stylesheet" href="components\header\menu\menu.css">
-<link rel="stylesheet" href="components\header\header.css">
-<link rel="stylesheet" href="index.css">
-<script type="module" src="js\index.js"></script>
-</head>
+<title id="tituloSite">Venue & Travel - Fusion 2025</title>
+<link rel="stylesheet" href="styles/venue-e-travel.css">
 <body>
-
-<div id="header">
-  <video playsinline autoplay muted loop poster id="video-bg"><source src="assets\video\cristo.mp4" type="video/mp4"></video>
-</div>
-
 <div id="body" class="container">
     <h2 id="titulo">Venue & Travel</h2>
+    <div class="row bc-green">
+        <div class="col textAlign-center">
+            <h2>Congress location</h2>
+            <p class="text">Rio Othon Palace</p>
+            <p class="text">Av. Atlântica, 3264 - 5º andar</p>  
+            <p class="text">Copacabana, Rio de Janeiro</p>
+          </div>
+        <div class="col textAlign-center">
+            <a id="hotelWebsite" target="_blank" href="https://www.othon.com.br/hotel-copacabana/rio-othon-palace">Hotel website</a>
+        </div>
+        <div class="col textAlign-center">
+          <img id="logoOthon" src="assets/others/logoOthon.png" alt="Rio Othon Palace">
+        </div>
+      </div>
+      <div id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1836.6307668795944!2d-43.18906184590071!3d-22.977408328910535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd547345cd851%3A0xdfbcb038384c36a1!2sRio%20Othon%20Palace!5e0!3m2!1spt-BR!2sbr!4v1715032702302!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="text">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.
+        </p>
+        <p>
+          Proin vel sodales purus. Ut id tempus sem. Morbi elit metus, lacinia sodales sodales quis, dapibus non nisl. Etiam sodales vehicula erat, ut molestie quam scelerisque aliquam. Aenean sodales in est a imperdiet. Donec dapibus nec nisi non imperdiet. Nulla tempor nibh in felis consequat, nec iaculis sem sodales. Fusce id ultricies nulla. Phasellus magna odio, sodales ut lorem vel, pretium vehicula dolor. Vestibulum bibendum mollis egestas. Vivamus in risus nec risus posuere semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec et justo sapien. Curabitur ante sapien, cursus ac pretium eu, accumsan a augue. Cras malesuada ut enim vel lacinia. Nulla lacinia iaculis justo, vel malesuada orci posuere ut.
+        </p>
+        <p>
+          Nullam in odio magna. Ut felis dui, aliquet in congue ac, auctor eget dui. Integer leo augue, iaculis quis tempus vel, convallis quis sem. Duis ac tellus nulla. Aliquam at quam non risus sagittis laoreet nec sit amet nunc. Vestibulum sit amet iaculis risus. Vivamus sed laoreet tellus. Aliquam metus tortor, pulvinar nec augue accumsan, sodales vestibulum erat. Vivamus et tortor erat. Vivamus sed vulputate est, a pharetra ante. Sed scelerisque facilisis lacus a facilisis.
+        </p>
+        <p>
+          Nulla tincidunt dictum nulla, in cursus ex vestibulum ut. Maecenas consequat eget tortor ac pellentesque. Morbi nibh tortor, tincidunt quis mollis eget, placerat in erat. Sed ultrices dictum nibh id efficitur. Donec sit amet vulputate ante. Phasellus dapibus dignissim elit. Nunc id vestibulum sem. Suspendisse potenti. 
+        </p>
+      </div>
+      <img id="hotelOthonFotos" src="assets/others/othonPalace.png" alt="Othon Palace">
+      <div class="col">
+        <h2>Coming from Santos Dummont Airport</h2>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.</p>
+      </div>
+      <div class="col">
+        <h2>Coming from Galeão Airport</h2>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.</p>
+      </div>
+
+      <div class="col">
+        <h2>Hotels Near the Event</h2>
+        <div class="row bc-green">
+            <div class="colHoteis textAlign-center">
+                <img id="logoHotel" src="assets/others/hotelFairmont.jfif" alt="Fairmont Rio de Janeiro Copacabana">
+            </div> 
+            <div class="col textAlign-center">
+                <h2 class="text font26">Fairmont Rio de Janeiro Copacabana</h2>
+                <p class="text font18">Av. Atlântica, 4240 Copacabana, Rio de Janeiro</p>  
+                <a id="hotelWebsite" target="_blank" href="https://fairmontrio.com/">Hotel website</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col textAlign-center">
+                <h2 class="text font26">Orla Copacabana Hotel</h2>
+                <p class="text font18">Av. Atlântica, 4122 Copacabana, Rio de Janeiro</p>  
+                <a id="hotelWebsite" target="_blank" href="https://www.orlahotel.com.br/">Hotel website</a>
+            </div>
+            <div class="colHoteis textAlign-center">
+                <img id="logoHotel" src="assets/others/hotelOrla.jfif" alt="Orla Copacabana Hotel">
+            </div> 
+        </div>
+        <div class="row bc-green">
+            <div class="colHoteis textAlign-center">
+                <img id="logoHotel" src="assets/others/hotelMirador.jfif" alt="Mirador Rio Hotel">
+            </div> 
+            <div class="col textAlign-center">
+                <h2 class="text font26">Mirador Rio Hotel</h2>
+                <p class="text font18">Rua Tonelero, 338 Copacabana, Rio de Janeiro</p>  
+                <a id="hotelWebsite" target="_blank" href="https://www.hotelmirador.com.br">Hotel website</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col textAlign-center">
+                <h2 class="text font26">Hotel Astória Copacabana</h2>
+                <p class="text font18">Rua República do Peru, 345 Copacabana, Rio de Janeiro</p>  
+                <a id="hotelWebsite" target="_blank" href="https://astoria.com.br/">Hotel website</a>
+            </div>
+            <div class="colHoteis textAlign-center">
+                <img id="logoHotel" src="assets/others/hotelAstoria.jfif" alt="Hotel Astória Copacabana">
+            </div> 
+        </div>
+      </div>
 </div>
-
-  
-<footer id="footer">
-</footer>
-
 </body>
-</html>
+
