corrigindo path das imagens

--- a/organization.html
+++ b/organization.html
@@ -12,7 +12,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="/assets/others/placeholder.jpg" alt="Placeholder">
+                <img src="./assets/others/placeholder.jpg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -24,7 +24,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="/assets/others/placeholder.jpg" alt="Placeholder">
+                <img src="assets/others/placeholder.jpg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -36,7 +36,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="/assets/others/placeholder.jpg" alt="Placeholder">
+                <img src="assets/others/placeholder.jpg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -52,7 +52,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="/assets/others/placeholder.jpg" alt="Placeholder">
+                <img src="assets/others/placeholder.jpg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -64,7 +64,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="/assets/others/placeholder.jpg" alt="Placeholder">
+                <img src="assets/others/placeholder.jpg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -76,7 +76,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="/assets/others/placeholder.jpg" alt="Placeholder">
+                <img src="assets/others/placeholder.jpg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -92,7 +92,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="/assets/others/placeholder.jpg" alt="Placeholder">
+                <img src="assets/others/placeholder.jpg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -104,7 +104,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="/assets/others/placeholder.jpg" alt="Placeholder">
+                <img src="assets/others/placeholder.jpg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -116,7 +116,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="/assets/others/placeholder.jpg" alt="Placeholder">
+                <img src="assets/others/placeholder.jpg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
