corrigindo o path de uma imagem especifica

--- a/organization.html
+++ b/organization.html
@@ -12,7 +12,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="./assets/others/placeholder.jpg" alt="Placeholder">
+                <img src="assets/others/placeholder.jpg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
