--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 <body>
 
 <div id="header">
-  <video playsinline autoplay loop muted thumbnail='favicon.svg' id="video-bg"><source src=".\assets\video\cristo.mp4" type="video/mp4"></video>
+  <video playsinline autoplay muted thumbnail='favicon.svg' id="video-bg"><source src=".\assets\video\cristo.mp4" type="video/mp4"></video>
   <img src="assets/others/layer_traco.svg" id="traco_cabecalho_solo">
 </div>
 <main id="conteudo">
