passando a criar o svg somente com o traco usando funcao

--- a/home.html
+++ b/home.html
@@ -15,8 +15,7 @@
 <body>
 
 <div id="header">
-  <video playsinline autoplay muted thumbnail='favicon.svg' id="video-bg"><source src=".\assets\video\cristo.mp4" type="video/mp4"></video>
-  <img src="assets/others/layer_traco.svg" id="traco_cabecalho_solo">
+  <video playsinline autoplay muted thumbnail='favicon.svg' id="video-bg"><source src="assets/video/cristo.mp4" type="video/mp4"></video>
 </div>
 <main id="conteudo">
   <div id="body" class="container home">  
