adicionando classe de padding-left

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         <img src="assets/others/imagem1Home.png" height="291px" alt="Imagem 1">
         <img src="assets/others/imagem2Home.jpg" height="345px" alt="Imagem 2">
       </div>
-      <div class="text">
+      <div class="text pl-2">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.
         </p>
