adicionando novas dos hoteis e a classe de padding-left

--- a/venue-e-travel.html
+++ b/venue-e-travel.html
@@ -20,7 +20,7 @@
       <div id="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1836.6307668795944!2d-43.18906184590071!3d-22.977408328910535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd547345cd851%3A0xdfbcb038384c36a1!2sRio%20Othon%20Palace!5e0!3m2!1spt-BR!2sbr!4v1715032702302!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <div class="text">
+      <div class="text pl-2">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.
         </p>
@@ -37,53 +37,53 @@
       <img id="hotelOthonFotos" src="assets/others/othonPalace.png" alt="Othon Palace">
       <div class="col">
         <h2>Coming from Santos Dummont Airport</h2>
-        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.</p>
+        <p class="text pl-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.</p>
       </div>
       <div class="col">
         <h2>Coming from Galeão Airport</h2>
-        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.</p>
+        <p class="text pl-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.</p>
       </div>
 
       <div class="col">
         <h2>Hotels Near the Event</h2>
         <div class="row bc-green">
             <div class="colHoteis textAlign-center">
-                <img id="logoHotel" src="assets/others/hotelFairmont.jfif" alt="Fairmont Rio de Janeiro Copacabana">
+                <img id="logoHotel" src="assets/others/hotelFairmont.jpg" alt="Fairmont Rio de Janeiro Copacabana">
             </div> 
-            <div class="col textAlign-center">
-                <h2 class="text font26">Fairmont Rio de Janeiro Copacabana</h2>
-                <p class="text font18">Av. Atlântica, 4240 Copacabana, Rio de Janeiro</p>  
+            <div class="col textAlign-center mb-2">
+                <h2 class="text font-26">Fairmont Rio de Janeiro Copacabana</h2>
+                <p class="text font-18">Av. Atlântica, 4240 Copacabana, Rio de Janeiro</p>  
                 <a id="hotelWebsite" target="_blank" href="https://fairmontrio.com/">Hotel website</a>
             </div>
         </div>
         <div class="row">
-            <div class="col textAlign-center">
-                <h2 class="text font26">Orla Copacabana Hotel</h2>
-                <p class="text font18">Av. Atlântica, 4122 Copacabana, Rio de Janeiro</p>  
+            <div class="col textAlign-center mb-2">
+                <h2 class="text font-26">Orla Copacabana Hotel</h2>
+                <p class="text font-18">Av. Atlântica, 4122 Copacabana, Rio de Janeiro</p>  
                 <a id="hotelWebsite" target="_blank" href="https://www.orlahotel.com.br/">Hotel website</a>
             </div>
             <div class="colHoteis textAlign-center">
-                <img id="logoHotel" src="assets/others/hotelOrla.jfif" alt="Orla Copacabana Hotel">
+                <img id="logoHotel" src="assets/others/hotelOrla.jpg" alt="Orla Copacabana Hotel">
             </div> 
         </div>
         <div class="row bc-green">
             <div class="colHoteis textAlign-center">
-                <img id="logoHotel" src="assets/others/hotelMirador.jfif" alt="Mirador Rio Hotel">
+                <img id="logoHotel" src="assets/others/hotelMirador.jpg" alt="Mirador Rio Hotel">
             </div> 
-            <div class="col textAlign-center">
-                <h2 class="text font26">Mirador Rio Hotel</h2>
-                <p class="text font18">Rua Tonelero, 338 Copacabana, Rio de Janeiro</p>  
+            <div class="col textAlign-center mb-2">
+                <h2 class="text font-26">Mirador Rio Hotel</h2>
+                <p class="text font-18">Rua Tonelero, 338 Copacabana, Rio de Janeiro</p>  
                 <a id="hotelWebsite" target="_blank" href="https://www.hotelmirador.com.br">Hotel website</a>
             </div>
         </div>
         <div class="row">
-            <div class="col textAlign-center">
-                <h2 class="text font26">Hotel Astória Copacabana</h2>
-                <p class="text font18">Rua República do Peru, 345 Copacabana, Rio de Janeiro</p>  
+            <div class="col textAlign-center mb-2">
+                <h2 class="text font-26">Hotel Astória Copacabana</h2>
+                <p class="text font-18">Rua República do Peru, 345 Copacabana, Rio de Janeiro</p>  
                 <a id="hotelWebsite" target="_blank" href="https://astoria.com.br/">Hotel website</a>
             </div>
             <div class="colHoteis textAlign-center">
-                <img id="logoHotel" src="assets/others/hotelAstoria.jfif" alt="Hotel Astória Copacabana">
+                <img id="logoHotel" src="assets/others/hotelAstoria.jpg" alt="Hotel Astória Copacabana">
             </div> 
         </div>
       </div>
