testando alteracao na mudanca de title da aba do navegador

--- a/organization.html
+++ b/organization.html
@@ -1,4 +1,4 @@
-<title id="tituloSite">Organization - Fusion 2025</title>
+<title>Organization - Fusion 2025</title>
 <link rel="stylesheet" href="styles/organization.css">
 <body>
 <div id="body" class="container">
