--- a/register.html
+++ b/register.html
@@ -1,4 +1,4 @@
-<title id="tituloSite">Register - Fusion 2025</title>
+<title>Register - Fusion 2025</title>
 <body>
 <div id="body" class="container">
     <h2 id="titulo">Register</h2>
