--- a/sponsors.html
+++ b/sponsors.html
@@ -1,4 +1,4 @@
-<title id="tituloSite">Sponsors - Fusion 2025</title>
+<title>Sponsors - Fusion 2025</title>
 <link rel="stylesheet" href="styles/sponsors.css">
 <body>
 <div id="body" class="container">
