--- a/venue-e-travel.html
+++ b/venue-e-travel.html
@@ -1,4 +1,4 @@
-<title id="tituloSite">Venue & Travel - Fusion 2025</title>
+<title>Venue & Travel - Fusion 2025</title>
 <link rel="stylesheet" href="styles/venue-e-travel.css">
 <body>
 <div id="body" class="container">
