--- a/call-for-contributions.html
+++ b/call-for-contributions.html
@@ -1,4 +1,4 @@
-<title id="tituloSite">Call for Contributions - Fusion 2025</title>
+<title>Call for Contributions - Fusion 2025</title>
 <body>
 <div id="body" class="container">
     <h2 id="titulo">Call for Contributions</h2>
