--- a/competition.html
+++ b/competition.html
@@ -1,4 +1,4 @@
-<title id="tituloSite">Competition - Fusion 2025</title>
+<title>Competition - Fusion 2025</title>
 <body>
 <div id="body" class="container">
     <h2 id="titulo">Competition</h2>
