--- a/program.html
+++ b/program.html
@@ -1,4 +1,4 @@
-<title id="tituloSite">Program - Fusion 2025</title>
+<title>Program - Fusion 2025</title>
 <body>
 <div id="body" class="container">
     <h2 id="titulo">Program</h2>
