--- a/submit.html
+++ b/submit.html
@@ -1,4 +1,4 @@
-<title id="tituloSite">Submit - Fusion 2025</title>
+<title>Submit - Fusion 2025</title>
 <body>
 <div id="body" class="container">
     <h2 id="titulo">Submit</h2>
