Adicionando fotos no general chair e mensagem de anuncio nas outras abas

--- a/organization.html
+++ b/organization.html
@@ -12,10 +12,10 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="assets/others/placeholderM.svg" alt="Placeholder">
-                <h2>Chair Name</h2>
-                <p>Institution</p>
-                <p>Country</p>
+                <img src="assets/organization/generalChairs/claudioMiceli.jfif" alt="Claudio Miceli de Farias">
+                <h2>Claudio Miceli de Farias</h2>
+                <p>Federal University of Rio de Janeiro</p>
+                <p>Brazil</p>
             </div>
             <div class="footerCard"></div>  
         </div>
@@ -24,22 +24,10 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="assets/others/placeholderF.svg" alt="Placeholder">
-                <h2>Chair Name</h2>
-                <p>Institution</p>
-                <p>Country</p>
-            </div>
-            <div class="footerCard"></div>  
-        </div>
-        <div class="card">
-            <div class="headerCard">
-                <div class="circuloBranco"></div>
-            </div>
-            <div class="contentCard">
-                <img src="assets/others/placeholderM.svg" alt="Placeholder">
-                <h2>Chair Name</h2>
-                <p>Institution</p>
-                <p>Country</p>
+                <img src="assets/organization/generalChairs/pauloCosta.jfif" alt="Paulo Costa">
+                <h2>Paulo Costa</h2>
+                <p>Federal University of Rio de Janeiro</p>
+                <p>Brazil</p>
             </div>
             <div class="footerCard"></div>  
         </div>
@@ -47,12 +35,19 @@
 
     <h2 class="ml-2">Executive Chairs</h2>
     <div class="row">
-        <div class="card">
+        <div>
+            <div class="text">
+                <p>
+                    To be announced
+                </p>
+            </div>  
+        </div>
+        <!-- <div class="card">
             <div class="headerCard">
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="assets/others/placeholderF.svg" alt="Placeholder">
+                <img src="assets/organization/placeholderF.svg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -64,7 +59,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="assets/others/placeholderM.svg" alt="Placeholder">
+                <img src="assets/organization/placeholderM.svg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -76,23 +71,30 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="assets/others/placeholderF.svg" alt="Placeholder">
+                <img src="assets/organization/placeholderF.svg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
             </div>
             <div class="footerCard"></div>  
-        </div>
+        </div> -->
     </div>
     
     <h2 class="ml-2">Program Chairs</h2>
     <div class="row">
-        <div class="card">
+        <div>
+            <div class="text">
+                <p>
+                    To be announced
+                </p>
+            </div>  
+        </div>
+        <!-- <div class="card">
             <div class="headerCard">
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="assets/others/placeholderM.svg" alt="Placeholder">
+                <img src="assets/organization/placeholderM.svg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -104,7 +106,7 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="assets/others/placeholderF.svg" alt="Placeholder">
+                <img src="assets/organization/placeholderF.svg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
@@ -116,13 +118,13 @@
                 <div class="circuloBranco"></div>
             </div>
             <div class="contentCard">
-                <img src="assets/others/placeholderM.svg" alt="Placeholder">
+                <img src="assets/organization/placeholderM.svg" alt="Placeholder">
                 <h2>Chair Name</h2>
                 <p>Institution</p>
                 <p>Country</p>
             </div>
             <div class="footerCard"></div>  
-        </div>
+        </div> -->
     </div>
            
 </div>
