--- a/register.html
+++ b/register.html
@@ -2,5 +2,12 @@
 <body>
 <div id="body" class="container">
     <h2 id="titulo">Register</h2>
+    <div class="content" id="titulo">
+        <div class="text">
+            <p>
+                To be announced
+            </p>
+        </div>  
+    </div>
 </div>
 </body>
